--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
+body {
+    font-family: Arial;
+}
 h2 {
     font-size: 28px;
+    font-family: Arial;
 }
 
 h1 {
     font-size: 36px;
+    font-family: Arial;
 }
 
 span {
     color: cornflowerblue;
+    font-family: Arial;
 }
 
 img {
