--- a/style.css
+++ b/style.css
@@ -33,3 +33,21 @@ header {
     align-items: center;
     justify-content: space-between;
 }
+
+header ul {
+    list-style: none;
+}
+
+header li {
+    margin-bottom: 15px;
+}
+
+header address img {
+    width: 16px;
+    height: 16px;
+    background-color: cornflowerblue;
+    margin-right: 10px;
+    padding: 8px;
+    vertical-align: middle;
+    border-radius: 50%;
+}
