--- a/style.css
+++ b/style.css
@@ -42,12 +42,19 @@ header li {
     margin-bottom: 15px;
 }
 
-header address img {
+.address-icon {
     width: 16px;
     height: 16px;
     background-color: cornflowerblue;
     margin-right: 10px;
     padding: 8px;
     vertical-align: middle;
+}
+
+.circle {
     border-radius: 50%;
+}
+
+.circle-photo {
+    border-radius: 20%;
 }
