--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 
 h1 {
     font-size: 36px;
+    margin-bottom: 10px;
 }
 
 h2 {
@@ -17,28 +18,33 @@ h3 {
 }
 
 span {
-    color: cornflowerblue;
+    color: grey;
+}
+
+.container {
+    box-shadow: 0 0 20px grey;
+    width: 960px;
+    margin: 0 auto;
+    background-color: white; 
 }
 
 section,
 header {
-    padding: 10px 60px 20px 60px;
-    background-color: white; 
-    width: 960px;
-    margin: 0 auto 0 auto;
+    padding: 10px 60px 20px 60px; 
 }
 
 header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding-top: 60px;
 }
 
 header ul {
     list-style: none;
 }
 
-header li {
+li {
     margin-bottom: 15px;
 }
 
@@ -100,6 +106,7 @@ p {
     margin-top: 20px;
     border-radius: 26px;
     transition: background-color 0.5s, color 0.5s;
+    box-shadow: 0 0 20px grey;
 }
 
 .cv-download-link:hover {
